# datascience-utils-python

./: README.md  pyproject.toml
vichshir/: __init__.py  preprocessing.py
vichshir/basics/: __init__.py
vichshir/preprocessing/: __init__.py
vichshir/preprocessing/text_matching/: __init__.py  nlp.py  patterns.py
vichshir/system/: __init__.py  files.py
vichshir/utils/: files.py
vichshir/webscraping/: __init__.py  crawler.py
