[project]
name = "vichshir"
description = "Utils package with commonly functions used for data science projects with Python"
license = "Apache-2.0"
requires-python = ">=3.7"
version = "0.1.0"
authors = [
    { name = "Victor Shirasuna", email = "victor.shirasuna@gmail.com" }
]
dependencies = [
    "pandas",
    "numpy",
    "sklearn",
    "transformers"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"